--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -7,9 +7,9 @@
       <span fxHide.lt-md fxHide.md>{{ title }}</span>
     </div>
 
-    <div class="user-name" fxLayout="row" fxLayoutAlign="center center">
+    <div class="user-name content" fxLayout="row" fxLayoutAlign="center center">
       <mat-icon fxHide.lt-md aria-label="user" style="padding-right: 30px">account_circle</mat-icon>
-      <div class="responsive-font">{{ currentUser.name }} </div>
+      <div class="truncate responsive-font">{{ currentUser.name }} </div>
     </div>
 
     <div class="menu">
