--- a/source/web/styles.scss
+++ b/source/web/styles.scss
@@ -139,3 +139,20 @@ body {
     font-size: 20px;
   }
 }
+
+//start truncate universal configuration
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.content {
+  width:100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+//end truncate universal configuration
+
+
