--- a/source/web/styles.scss
+++ b/source/web/styles.scss
@@ -131,12 +131,12 @@ body {
 
 @media screen and (max-width: 600px) {
   .responsive-font {
-    font-size: 14px;
+    font-size: .8em;
   }
 }
 @media screen and (min-width: 601px) {
   .responsive-font {
-    font-size: 20px;
+    font-size: 1.0em;
   }
 }
 
