--- a/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
+++ b/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
@@ -1,26 +1,27 @@
 ﻿<style>
   .card-layout {
     display: grid;
-    grid-template-columns: 1.5fr 11fr .5fr;
+    grid-template-columns: 2fr 11fr .5fr;
     grid-template-rows: 1fr .5fr;
     /*box-sizing: border-box;*/
 
-
-
     grid-template-areas:
     "avatar title play"
-    ". description status"
+    ".      description status"
   }
 
   .avatar {
     grid-area: avatar;
     display: flex;
     justify-content: center;
-    align-items: center;
+    /*align-items: center;*/
   }
 
   .event-title {
     grid-area: title;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .event-play {
@@ -43,6 +44,13 @@
   .event-subtitle {
     color: gray;
   }
+
+
+  /*@media screen and (max-width: 600px) {*/
+  /*  .card-layout {*/
+  /*    width: 90vw;*/
+  /*  }*/
+  /*}*/
 
 </style>
 
