--- a/source/web/styles.scss
+++ b/source/web/styles.scss
@@ -130,6 +130,14 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  .body-layout{
+    display: flex;
+    width: 90vw;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
   .responsive-font {
     font-size: .8em;
   }
