--- a/source/web/app/app.component.css
+++ b/source/web/app/app.component.css
@@ -1,34 +1,34 @@
-.nav-toolbar {
+/*.nav-toolbar {*/
   /*display: -webkit-flex; !* OLD - iOS 6-, Safari 3.1-6 *!*/
-  flex: 1 1 auto;
-}
+  /*flex: 1 1 auto;*/
+/*}*/
 
-.toolbar-layout {
-  padding: 0px;
-  display: grid;
-  grid-template-columns: 1.5fr 7fr .5fr;
-  grid-template-rows: 1fr;
-  grid-template-areas: "icon userName menu"
-}
+/*.toolbar-layout {*/
+/*  padding: 0px;*/
+/*  display: grid;*/
+/*  grid-template-columns: 1.5fr 7fr .5fr;*/
+/*  grid-template-rows: 1fr;*/
+/*  grid-template-areas: "icon userName menu"*/
+/*}*/
 
-@media screen and (max-width: 600px) {
-  .icon {
-    grid-area: icon;
-    padding: 8px;
-  }
-}
-@media screen and (min-width: 601px) {
-  .icon {
-    grid-area: icon;
-    padding: 16px;
-  }
-}
+/*@media screen and (max-width: 600px) {*/
+/*  .icon {*/
+/*    grid-area: icon;*/
+/*    padding: 8px;*/
+/*  }*/
+/*}*/
+/*@media screen and (min-width: 601px) {*/
+/*  .icon {*/
+/*    grid-area: icon;*/
+/*    padding: 16px;*/
+/*  }*/
+/*}*/
 
-.user-name {
-  grid-area: userName;
-}
+/*.user-name {*/
+/*  grid-area: userName;*/
+/*}*/
 
-.menu {
-  grid-area: menu;
-}
+/*.menu {*/
+/*  grid-area: menu;*/
+/*}*/
 
