--- a/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
+++ b/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 2fr 11fr .5fr;
     grid-template-rows: 1fr .5fr;
-    /*box-sizing: border-box;*/
+    box-sizing: border-box;
 
     grid-template-areas:
     "avatar title play"
