--- a/source/web/styles.scss
+++ b/source/web/styles.scss
@@ -4,7 +4,7 @@
 @include mat-core();
 
 body {
-  padding-top: 70px;
+  //padding-top: 70px;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
@@ -18,135 +18,117 @@ body {
   color: #fff;
 }
 
-.contentChart {
-  height: 100%;
-  display: flex !important;
-  align-items: center;
-  justify-content: center;
-}
+//.contentChart {
+//  height: 100%;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//}
 
 .spinner {
-  -webkit-animation: rotator 1.4s linear infinite;
+  //-webkit-animation: rotator 1.4s linear infinite;
   animation: rotator 1.4s linear infinite;
 }
 
-@-webkit-keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-    transform: rotate(270deg);
-  }
-}
+//@-webkit-keyframes rotator {
+//  0% {
+//    -webkit-transform: rotate(0deg);
+//    transform: rotate(0deg);
+//  }
+//  100% {
+//    -webkit-transform: rotate(270deg);
+//    transform: rotate(270deg);
+//  }
+//}
+//
+//@keyframes rotator {
+//  0% {
+//    -webkit-transform: rotate(0deg);
+//    transform: rotate(0deg);
+//  }
+//  100% {
+//    -webkit-transform: rotate(270deg);
+//    transform: rotate(270deg);
+//  }
+//}
+//
+//.path {
+//  stroke-dasharray: 187;
+//  stroke-dashoffset: 0;
+//  -webkit-transform-origin: center;
+//  transform-origin: center;
+//  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+//  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+//}
+//
+//@-webkit-keyframes colors {
+//  0% {
+//    stroke: #4285f4;
+//  }
+//  25% {
+//    stroke: #de3e35;
+//  }
+//  50% {
+//    stroke: #f7c223;
+//  }
+//  75% {
+//    stroke: #1b9a59;
+//  }
+//  100% {
+//    stroke: #4285f4;
+//  }
+//}
+//
+//@keyframes colors {
+//  0% {
+//    stroke: #4285f4;
+//  }
+//  25% {
+//    stroke: #de3e35;
+//  }
+//  50% {
+//    stroke: #f7c223;
+//  }
+//  75% {
+//    stroke: #1b9a59;
+//  }
+//  100% {
+//    stroke: #4285f4;
+//  }
+//}
+//
+//@-webkit-keyframes dash {
+//  0% {
+//    stroke-dashoffset: 187;
+//  }
+//  50% {
+//    stroke-dashoffset: 46.75;
+//    -webkit-transform: rotate(135deg);
+//    transform: rotate(135deg);
+//  }
+//  100% {
+//    stroke-dashoffset: 187;
+//    -webkit-transform: rotate(450deg);
+//    transform: rotate(450deg);
+//  }
+//}
+//
+//@keyframes dash {
+//  0% {
+//    stroke-dashoffset: 187;
+//  }
+//  50% {
+//    stroke-dashoffset: 46.75;
+//    -webkit-transform: rotate(135deg);
+//    transform: rotate(135deg);
+//  }
+//  100% {
+//    stroke-dashoffset: 187;
+//    -webkit-transform: rotate(450deg);
+//    transform: rotate(450deg);
+//  }
+//}
 
-@keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-    transform: rotate(270deg);
-  }
-}
-
-.path {
-  stroke-dasharray: 187;
-  stroke-dashoffset: 0;
-  -webkit-transform-origin: center;
-  transform-origin: center;
-  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-}
-
-@-webkit-keyframes colors {
-  0% {
-    stroke: #4285f4;
-  }
-  25% {
-    stroke: #de3e35;
-  }
-  50% {
-    stroke: #f7c223;
-  }
-  75% {
-    stroke: #1b9a59;
-  }
-  100% {
-    stroke: #4285f4;
-  }
-}
-
-@keyframes colors {
-  0% {
-    stroke: #4285f4;
-  }
-  25% {
-    stroke: #de3e35;
-  }
-  50% {
-    stroke: #f7c223;
-  }
-  75% {
-    stroke: #1b9a59;
-  }
-  100% {
-    stroke: #4285f4;
-  }
-}
-
-@-webkit-keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-    transform: rotate(450deg);
-  }
-}
-
-@keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-    transform: rotate(450deg);
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .body-layout{
-    display: flex;
-    width: 90vw;
-    flex-direction: column;
-    align-items: center;
-
-  }
-
-  .responsive-font {
-    font-size: .8em;
-  }
-}
-@media screen and (min-width: 601px) {
-  .responsive-font {
-    font-size: 1.0em;
-  }
-}
 
 //start truncate universal configuration
 .truncate {
@@ -156,11 +138,45 @@ body {
 }
 
 .content {
-  width:100%;
+  //width:50vw;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 //end truncate universal configuration
+
+@media screen and (min-width: 360px) {
+  .responsive-font {
+    font-size: .8em;
+  }
+}
+
+@media screen and (min-width: 380px) {
+  body {
+    flex: 1;
+    width: 90vw;
+  }
+  .responsive-font {
+    font-size: .8em;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  body {
+    flex: 1;
+    width: 100vw;
+  }
+  .responsive-font {
+    font-size: .8em;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  .responsive-font {
+    font-size: 1.0em;
+  }
+}
+
+
 
 
