--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -1,65 +1,86 @@
 <style>
-  .app-toolbar{
+  .app-toolbar {
     display: flex;
     justify-content: space-between;
     position: fixed;
-    z-index:10;
+    z-index: 1;
+
   }
+
+  .app-toolbar-icon {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .app-toolbar-icon #title {
+    margin-right: 1em;
+  }
+
+  @media screen and (min-device-width : 375px)
+    and (max-device-width : 812px)
+    and (-webkit-device-pixel-ratio : 3) {
+    .app-toolbar, .c-app-content{
+      flex: 1;
+      width: 90vw;
+    }
+  }
+
 
 </style>
 
-<div class="">
-<mat-toolbar class="app-toolbar"color="primary" *ngIf="currentUser">
-    <div class="toolbar-icon">
-      <button mat-icon-button id="title" routerLink="/dashboard">
-        <img src="{{iconToolbar}}">
+<mat-toolbar class="app-toolbar" color="primary" *ngIf="currentUser">
+  <div class="app-toolbar-icon">
+    <button mat-icon-button id="title" routerLink="/dashboard">
+      <img src="{{iconToolbar}}">
+    </button>
+    <span fxHide.lt-md fxHide.md>{{ title }}</span>
+  </div>
+
+  <div class="toolbar-user-name content" fxLayout="row" fxLayoutAlign="center center">
+    <mat-icon fxHide.lt-md aria-label="user" style="padding-right: 30px">account_circle</mat-icon>
+    <div class="truncate responsive-font">{{ currentUser.name }} </div>
+  </div>
+
+  <div class="toolbar-menu">
+    <div fxHide.lt-md fxHide.md>
+      <button mat-button routerLink="/project-contact">
+        <mat-icon fxLayoutGap="10px">comments</mat-icon>
+        <span style="margin-left:5px">Contato</span>
       </button>
-      <span fxHide.lt-md fxHide.md>{{ title }}</span>
+      <button mat-button routerLink="/exam-results">
+        <mat-icon>description</mat-icon>
+        <span style="margin-left:5px">Exames</span>
+      </button>
+      <button mat-button (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+        <span style="margin-left:5px">Sair</span>
+      </button>
     </div>
-
-    <div class="toolbar-user-name content" fxLayout="row" fxLayoutAlign="center center">
-      <mat-icon fxHide.lt-md aria-label="user" style="padding-right: 30px">account_circle</mat-icon>
-      <div class="truncate responsive-font">{{ currentUser.name }} </div>
-    </div>
-
-    <div class="toolbar-menu">
-      <div fxHide.lt-md fxHide.md>
-        <button mat-button routerLink="/project-contact">
-          <mat-icon fxLayoutGap="10px">comments</mat-icon>
-          <span style="margin-left:5px">Contato</span>
+    <div fxHide.gt-md>
+      <button mat-button [mat-menu-trigger-for]="menu">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <mat-menu x-position="before" #menu="matMenu" fxLayoutAlign="center center">
+        <button mat-menu-item routerLink="/project-contact">
+          <mat-icon>comments</mat-icon>
+          Contato
         </button>
-        <button mat-button routerLink="/exam-results">
+        <button mat-menu-item routerLink="/exam-results">
           <mat-icon>description</mat-icon>
-          <span style="margin-left:5px">Exames</span>
+          Exames
         </button>
-        <button mat-button (click)="logout()">
-          <mat-icon>exit_to_app</mat-icon>
-          <span style="margin-left:5px">Sair</span>
+        <button mat-menu-item (click)="logout()">
+          <mat-icon aria-label="menu">exit_to_app</mat-icon>
+          Sair
         </button>
-      </div>
-      <div fxHide.gt-md>
-        <button mat-button [mat-menu-trigger-for]="menu">
-          <mat-icon>menu</mat-icon>
-        </button>
-        <mat-menu x-position="before" #menu="matMenu" fxLayoutAlign="center center">
-          <button mat-menu-item routerLink="/project-contact">
-            <mat-icon>comments</mat-icon>
-            Contato
-          </button>
-          <button mat-menu-item routerLink="/exam-results">
-            <mat-icon>description</mat-icon>
-            Exames
-          </button>
-          <button mat-menu-item (click)="logout()">
-            <mat-icon aria-label="menu">exit_to_app</mat-icon>
-            Sair
-          </button>
-        </mat-menu>
-      </div>
+      </mat-menu>
     </div>
+  </div>
 </mat-toolbar>
+<div class="c-app-content">
   <app-alert></app-alert>
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+
 </div>
 
 
