--- a/source/web/styles.scss
+++ b/source/web/styles.scss
@@ -44,7 +44,7 @@ body {
 }
 //end truncate universal configuration
 
-@media screen and (min-width: 360px) {
+@media screen {
   .responsive-font {
     font-size: .8em;
   }
