--- a/source/web/app/components/account/account.scss
+++ b/source/web/app/components/account/account.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   position: relative;
   .content {
     z-index: 1;
