--- a/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
+++ b/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
@@ -1,61 +1,4 @@
-﻿<style>
-  .card-layout {
-    display: grid;
-    grid-template-columns: 2fr 11fr .5fr;
-    grid-template-rows: 1fr .5fr;
-    box-sizing: border-box;
-
-    grid-template-areas:
-    "avatar title play"
-    ".      description status"
-  }
-
-  .avatar {
-    grid-area: avatar;
-    display: flex;
-    justify-content: center;
-    /*align-items: center;*/
-  }
-
-  .event-title {
-    grid-area: title;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .event-play {
-    grid-area: play;
-    display: flex;
-    justify-content: center;
-  }
-
-  .event-description {
-    grid-area: description;
-  }
-
-  .event-status {
-    grid-area: status;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .event-subtitle {
-    color: gray;
-  }
-
-
-  /*@media screen and (max-width: 600px) {*/
-  /*  .card-layout {*/
-  /*    width: 90vw;*/
-  /*  }*/
-  /*}*/
-
-</style>
-
-
-<mat-card class="card-layout">
+﻿<mat-card class="card-layout">
   <div class="avatar">
     <mat-icon>description</mat-icon>
   </div>
